<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="refresh_header_pulling">Pull down to refresh</string>
    <string name="refresh_header_refreshing">Refreshing</string>
    <string name="refresh_header_loading">Loading&#8230;</string>
    <string name="refresh_header_release">Refresh after release</string>
    <string name="refresh_header_finish">Refresh completed</string>
    <string name="refresh_header_failed">Refresh failed</string>
    <string name="refresh_header_update">\'Last update\' M-d HH:mm</string>
    <string name="refresh_footer_pulling">Pull up to load more</string>
    <string name="refresh_footer_release">Release to load</string>
    <string name="refresh_footer_loading">Loading&#8230;</string>
    <string name="refresh_footer_refreshing">Refreshing&#8230;</string>
    <string name="refresh_footer_finish">Loading completed</string>
    <string name="refresh_footer_failed">Loading failed</string>
    <string name="refresh_footer_nothing">All loaded</string>
    <string name="black">Block</string>
    <string name="black_ing">Unblock</string>
    <string name="black_1">Blacked</string>
    <string name="black_ing_1">The blacklist has been lifted</string>
    <string name="bonus_sign">Sign in now</string>
    <string name="bonus_sign_1">Signed in for %1$s days</string>
    <string name="bonus_sign_2">Sign in continuously to receive additional rewards</string>
    <string name="bonus_sign_3">Day %1$s</string>
    <string name="beauty_init_error">Beauty initialization exception, cannot be used</string>
    <string name="cash">Withdrawal account</string>
    <string name="cash_account_empty">You have not set up a withdrawal account yet</string>
    <string name="cash_add_account">Add withdrawal account</string>
    <string name="cash_account_type">Account type</string>
    <string name="cash_input_bank_user_name">Please enter the cardholder\'s name</string>
    <string name="cash_input_bank_account">Please enter the bank card account number</string>
    <string name="cash_input_bank_name">Please enter the bank name</string>
    <string name="cash_input_wx_account">Please enter your paypal account</string>
    <string name="cash_input_ali_account">Please enter Vodaphone account</string>
    <string name="cash_input_ali_name">Please enter Vodaphone account name</string>
    <string name="cash_type_ali">Alipay</string>
    <string name="cash_type_wx">WeChat</string>
    <string name="cash_type_bank">Bank card</string>
    <string name="cash_delete">Do you want to delete this account? </string>
    <string name="cash_record">Withdrawals record</string>
    <string name="coin_give">Gift</string>
    <string name="coin_balance">Account balance</string>
    <string name="coin_pay_ali">Alipay</string>
    <string name="coin_pay_wx">WeChat payment</string>
    <string name="coin_charge_success">Recharge successful</string>
    <string name="coin_charge_failed">Recharge failed</string>
    <string name="coin_ali_not_install">Alipay is not installed</string>
    <string name="coin_wx_not_install">WeChat is not installed</string>
    <string name="coin_qq_not_install">QQ is not installed</string>
    <string name="pay_ali_not_enable">Alipay is not configured</string>
    <string name="pay_wx_not_enable">WeChat is not configured</string>
    <string name="pay_paypal_not_enable">Paypal is not configured</string>
    <string name="copy_link">Copy link</string>
    <string name="copy_success">Copy successfully</string>
    <string name="edit_profile">Edit information</string>
    <string name="edit_profile_avatar">Avatar</string>
    <string name="edit_profile_nickname">Nickname</string>
    <string name="edit_profile_update_nickname">Change username</string>
    <string name="edit_profile_update_sign">Modify signature</string>
    <string name="edit_profile_sign">Sign</string>
    <string name="edit_profile_birthday">Birthday</string>
    <string name="edit_profile_sex">Gender</string>
    <string name="edit_profile_city">Location</string>
    <string name="edit_profile_impression">My anchor impression</string>
    <string name="edit_profile_update_avatar_success">Set avatar successfully</string>
    <string name="edit_profile_sign_hint">Leave something behind</string>
    <string name="edit_profile_name_hint">Please enter a nickname</string>
    <string name="edit_profile_sign_max">You can enter up to 20 characters</string>
    <string name="edit_profile_name_max">Nickname can be up to 8 characters long</string>
    <string name="edit_profile_name_empty">Please enter a nickname</string>
    <string name="edit_profile_sign_empty">Please enter signature</string>
    <string name="edit_profile_right_date">Please select the correct date</string>
    <string name="edit_profile_length_font">Word limit exceeded</string>
    <string name="newest">Newest</string>
    <string name="follow">Follow</string>
    <string name="follow_2">Follows</string>
    <string name="following">Followed</string>
    <string name="follow_no_follow">You are not following anyone yet</string>
    <string name="follow_do_follow">Hurry up and follow the people you are interested in</string>
    <string name="follow_no_follow_2">TA has not followed anyone yet</string>
    <string name="fans">Fans</string>
    <string name="fans_no_fans">You don\'t have fans yet</string>
    <string name="fans_do_fans">Improving your personal information will allow more people to pay attention to you</string>
    <string name="fans_no_fans_2">TA doesn\'t have any fans yet</string>
    <string name="find_pwd_forget">Forgot password</string>
    <string name="find_pwd_find">Find now</string>
    <string name="guard_choose_duration">Choose guard duration</string>
    <string name="guard_right">Select privilege</string>
    <string name="guard_buy">Open now</string>
    <string name="guard_buy_2">Activate guard</string>
    <string name="guard_buy_3">Renewal guard</string>
    <string name="guard_my">My&#160;</string>
    <string name="guard_guard">Guard</string>
    <string name="guard_week_con">Contribution this week: %1$s %2$s</string>
    <string name="guard_no_data">Be his first guardian</string>
    <string name="guard_tip_0">Go and activate a guard for your favorite anchor</string>
    <string name="guard_tip_1">You are the monthly guardian of the current anchor \n The guardianship date ends at</string>
    <string name="guard_tip_2">You are the annual guardian of the current anchor \n The guardianship date ends at</string>
    <string name="guard_gift_tip">Annual guard exclusive gift</string>
    <string name="guard_no_data_2">You haven\'t guarded yet</string>
    <string name="guard_buy_tip">You are the annual guard of the current anchor \n Cannot activate 7-day/month guard</string>
    <string name="guard_buy_tip_2">You are the monthly guard of the current anchor. Activating annual guard will cover your monthly guard duration. Do you want to activate it? </string>
    <string name="guard_buy_tip_3">You will spend %1$s&#160;%2$s to activate %3$s for the host</string>
    <string name="guard_name_1">7-day guard</string>
    <string name="guard_name_2">Month Guard</string>
    <string name="guard_name_3">Year Guard</string>
    <string name="guard_list">Guardian list</string>
    <string name="guard_buy_msg">%1$s guarded the anchor</string>
    <string name="home_page">Home</string>
    <string name="home_page_share_1">"%1$s" is also in %2$s,~Click to view his story</string>
    <string name="home_page_share_2">He has %1$s fans, come and watch! </string>
    <string name="im_live_anchor_msg">Hi~ I am the anchor, come and chat with me. </string>
    <string name="im_type_image">[image]</string>
    <string name="im_type_voide">[Voice]</string>
    <string name="im_type_location">[location]</string>
    <string name="im_type_goods">[Goods]</string>
    <string name="im_type_emoji">[emoji]</string>
    <string name="im_msg">Message</string>
    <string name="im_msg_ignore_unread">Ignore unread</string>
    <string name="im_msg_ignore_unread_2">Unread messages ignored</string>
    <string name="im_msg_ignore_unread_3">No unread messages yet</string>
    <string name="im_msg_send_failed">Message sending failed</string>
    <string name="im_send_too_fast">Frequent operations</string>
    <string name="im_you_are_blacked">The other party temporarily refuses to receive your message</string>
    <string name="im_no_msg">You haven\'t received any message yet</string>
    <string name="im_send_msg">Send message&#8230;</string>
    <string name="im_input_img">Image</string>
    <string name="im_input_camera">Take photo</string>
    <string name="im_input_voice">Voice input</string>
    <string name="im_input_location">Location</string>
    <string name="im_choose_image">Choose image</string>
    <string name="im_no_image">Local image not found</string>
    <string name="im_please_choose_image">Please choose an image</string>
    <string name="im_search_location">Search location</string>
    <string name="im_location_failed">Location information not obtained</string>
    <string name="im_map_not_loaded">Map not loaded</string>
    <string name="im_address_failed">Address not obtained</string>
    <string name="im_get_location_failed">Getting location failed</string>
    <string name="im_follow_tip">Click to follow and you can see the other party\'s updates in time</string>
    <string name="im_follow_tip_2">Follow the other party successfully</string>
    <string name="im_press_say">Press and hold to speak</string>
    <string name="im_unpress_stop">Unpress end</string>
    <string name="im_please_say">Please speak&#8230;</string>
    <string name="im_record_audio_too_short">Recording time is too short</string>
    <string name="video_comment_voice_tip">Swipe up to cancel sending</string>
    <string name="video_comment_voice_tip_1">Sending canceled</string>
    <string name="im_system_msg">System message</string>
    <string name="im_no_sys_msg">No system message</string>
    <string name="im_pri_chat">Chat</string>
    <string name="impress">Anchor impression</string>
    <string name="impress_add">Add</string>
    <string name="impress_add_max">Select up to three items</string>
    <string name="impress_please_choose">Please choose impression</string>
    <string name="impress_not_changed">Impression not modified</string>
    <string name="impress_tip">Please select your impression of the host</string>
    <string name="login_immediately_login">Log in immediately</string>
    <string name="main_home">Home</string>
    <string name="main_active">Dynamic</string>
    <string name="main_me">Mine</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Sure</string>
    <string name="save">Save</string>
    <string name="video">Video</string>
    <string name="mall_027">Region</string>
    <string name="mall_028">Detailed address</string>
    <string name="mall_034">Consignee</string>
    <string name="mall_035">Consignee\'s mobile phone number</string>
    <string name="mall_088">Up to 15 characters</string>
    <string name="mall_090">Inventory (pieces)</string>
    <string name="mall_091">Up to 9999999 pieces</string>
    <string name="mall_092">Unit price ($)</string>
    <string name="mall_093">Minimum $1.00</string>
    <string name="mall_094">Upload pictures</string>
    <string name="mall_099">Delete specification</string>
    <string name="a_068">You are not logged in yet</string>
    <string name="a_069">Log in to your account to view exciting content</string>
    <string name="a_070">Share</string>
    <string name="a_072">Share to news</string>
    <string name="a_073">Share to friends</string>
    <string name="map_gaode">Google map</string>
    <string name="进入全功能模式">Enter full function mode</string>
    <string name="please_enter_the_amount">please enter amount</string>
    <string name="_game_currency">game currency</string>
</resources>