<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_068"
        android:textColor="@color/textColor"
        android:textSize="15sp" />

    <TextView
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/a_069"
        android:textColor="@color/gray1"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/btn_to_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_btn_common_02"
        android:gravity="center"
        android:minWidth="200dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/login_immediately_login"
        android:textColor="@color/white"
        android:textSize="14sp" />


</LinearLayout>