<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_4"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/a_070"
        android:textColor="@color/textColor"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/price_yong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:textColor="@color/gray3"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray2" />

    <TextView
        android:id="@+id/btn_share_active"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/a_072"
        android:textColor="@color/textColor"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray2" />

    <TextView
        android:id="@+id/btn_share_friend"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/a_073"
        android:textColor="@color/textColor"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/gray2" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/gray1"
        android:textSize="14sp" />
</LinearLayout>