<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_exchange_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:hint="@string/please_enter_the_amount"
            android:inputType="number"
            android:maxLength="11"
            android:textSize="12sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray1"/>

        <TextView
            android:id="@+id/tv_exchange_diamonds_coins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:text="@string/_game_currency"
            android:textColor="@color/gray"
            android:textSize="12sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="26dp"
        android:background="@color/gray1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_recharge_cancel"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:background="@drawable/layer_white_solid_main_color_stroke_20dp_corner"
            android:gravity="center"
            android:backgroundTint="@color/fg_btn_follow"
            android:text="@string/cancel"
            android:textSize="12sp"/>


        <TextView
            android:id="@+id/tv_recharge_confirm"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/layer_main_color_solid_20dp_corner"
            android:gravity="center"
            android:text="@string/confirm"
            android:backgroundTint="#0f0"
            android:textColor="@color/white"
            android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>