<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_title" />

    <LinearLayout
        android:id="@+id/refund_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="15dp"

        >

        <EditText
            android:id="@+id/refund_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/mall_034"
            android:textColor="@color/textColor"
            android:textColorHint="@color/gray3"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/gray2" />

        <EditText
            android:id="@+id/refund_phone_num"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/mall_035"
            android:inputType="number"
            android:textColor="@color/textColor"
            android:textColorHint="@color/gray3"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/gray2" />

        <FrameLayout
            android:id="@+id/btn_refund_area"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <TextView
                android:id="@+id/refund_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/mall_027"
                android:textColor="@color/textColor"
                android:textColorHint="@color/gray3"
                android:textSize="14sp"
                android:visibility="gone"
                />


            <ImageView
                android:layout_width="14dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical|end"
                android:src="@mipmap/arrow_01"
                app:tint="@color/gray3" />

        </FrameLayout>
        <FrameLayout
            android:id="@+id/map_use_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_map"
                android:drawablePadding="8dp"
                android:text="@string/map_gaode"

                android:gravity="center_vertical"

                />

        </FrameLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/gray2" />

        <EditText
            android:id="@+id/refund_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/mall_028"
            android:minHeight="50dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/gray3"
            android:textSize="14sp" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_btn_common_01"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>