<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">

    <com.livestreaming.common.custom.MyViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:canScroll="false" />

    <FrameLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@color/white" />

        <com.livestreaming.common.custom.TabButtonGroup
            android:id="@+id/tab_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.livestreaming.common.custom.TabButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:tbn_checked="true"
                app:tbn_icon_array_id="@array/main_tab_home"
                app:tbn_icon_size="26dp"
                app:tbn_text_color_checked="@color/global"
                app:tbn_text_color_unchecked="@color/textColor2"
                app:tbn_text_size="11sp"
                app:tbn_tip="@string/main_home" />

            <com.livestreaming.common.custom.TabButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="60dp"
                android:layout_weight="1"
                app:tbn_icon_array_id="@array/main_tab_shop"
                app:tbn_icon_size="26dp"
                app:tbn_text_color_checked="@color/global"
                app:tbn_text_color_unchecked="@color/textColor2"
                app:tbn_text_size="11sp"
                app:tbn_tip="@string/video" />

            <com.livestreaming.common.custom.TabButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:tbn_icon_array_id="@array/main_tab_near"
                app:tbn_icon_size="26dp"
                app:tbn_text_color_checked="@color/global"
                app:tbn_text_color_unchecked="@color/textColor2"
                app:tbn_text_size="11sp"
                app:tbn_tip="@string/main_active" />

            <com.livestreaming.common.custom.TabButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:tbn_icon_array_id="@array/main_tab_me"
                app:tbn_icon_size="26dp"
                app:tbn_text_color_checked="@color/global"
                app:tbn_text_color_unchecked="@color/textColor2"
                app:tbn_text_size="11sp"
                app:tbn_tip="@string/main_me" />

        </com.livestreaming.common.custom.TabButtonGroup>

        <ImageView
            android:id="@+id/btn_start"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="5dp"
            android:onClick="mainClick"
            android:src="@mipmap/icon_main_start" />
    </FrameLayout>

    <TextView
        android:id="@+id/btn_full_function"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@id/bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_btn_common_04"
        android:gravity="center"
        android:minWidth="160dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/进入全功能模式"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="invisible"
        tools:visibility="visible" />

</RelativeLayout>
