<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="15dp">

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:minWidth="115dp"
            android:id="@+id/index"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/textColor"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/gray2"
            android:ellipsize="end"
            android:hint="@string/mall_088"
            android:maxLength="15"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:textColorHint="@color/gray3"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:minWidth="115dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/mall_090"
            android:textColor="@color/textColor"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/num"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/gray2"
            android:ellipsize="end"
            android:hint="@string/mall_091"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:textColorHint="@color/gray3"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:minWidth="115dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/mall_092"
            android:textColor="@color/textColor"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/gray2"
            android:ellipsize="end"
            android:hint="@string/mall_093"
            android:inputType="numberDecimal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:textColorHint="@color/gray3"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <com.livestreaming.common.custom.MyFrameLayout2
            android:id="@+id/btn_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:layout_weight="1"
            android:background="@color/gray2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/shop_apply_01"
                    app:tint="@color/gray1" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/mall_094"
                    android:textColor="@color/textColor2"
                    android:textSize="12sp"
                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/btn_del"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="end"
                android:padding="5dp"
                android:src="@mipmap/close_01"
                android:visibility="invisible" />

        </com.livestreaming.common.custom.MyFrameLayout2>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TextView
                android:id="@+id/btn_del_spec"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_gravity="end|center_vertical"
                android:background="@drawable/seller_03"
                android:gravity="center"
                android:minWidth="72dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/mall_099"
                android:textColor="@color/textColor2"
                android:textSize="12sp"
                android:visibility="invisible" />

        </FrameLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray2" />


</LinearLayout>